tests/a/tests/integrity/fail/pattern/pattern.1.stderr
error: expected {b}{b}, found {root}{root}
 --> tests/integrity/fail/pattern/pattern.1.rs:8:9
  |
8 |     y = false;
  |         ^^^^^
